--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.23",
     "axios": "^0.25.0",
+    "fast-equals": "^2.0.4",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.34.14"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.47.4",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
     "autoprefixer": "^10.4.2",
