--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.34.14"
+    "react-ionicons": "^4.2.0",
+    "react-query": "^3.34.14",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/google.maps": "^3.47.4",
